// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSearchRow should render default view 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-autoWidth-1"
          item={true}
          style={
            Object {
              "minWidth": 200,
            }
          }
        >
          <WithStyles(ForwardRef(FormControl))
            fullWidth={true}
          >
            <WithStyles(ForwardRef(Select))
              aria-label="Click to select a field to search from the list - Select a field currently selected"
              error={true}
              onChange={[Function]}
              value="0"
            >
              <WithStyles(ForwardRef(MenuItem))
                disabled={true}
                key="0"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="0"
              >
                Select a field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(Divider))
                key="1"
              />
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="all"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="all"
              >
                Any field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_title"
              >
                Title
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_book_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_book_title"
              >
                Book title for chapters
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author"
              >
                Author Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author_id"
              >
                Author ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor"
              >
                Editor/Contributor
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor_id"
              >
                Contributor ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_ismemberof"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_ismemberof"
              >
                Collection
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_doi"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_doi"
              >
                DOI
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_pid"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_pid"
              >
                PID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_series"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_series"
              >
                Series
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_journal_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_journal_name"
              >
                Journal name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_conference_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_conference_name"
              >
                Conference Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_publisher"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_publisher"
              >
                Publisher
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_genre_type"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_genre_type"
              >
                Thesis type
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_org_unit_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_org_unit_name"
              >
                School, Centre or Institute
              </WithStyles(ForwardRef(MenuItem))>
            </WithStyles(ForwardRef(Select))>
            <WithStyles(ForwardRef(FormHelperText))
              error={true}
            >
              Please select a field to search
            </WithStyles(ForwardRef(FormHelperText))>
          </WithStyles(ForwardRef(FormControl))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs="auto"
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-advancedSearchCombiner-3"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-mobileInputRow-5"
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-autoWidth-1"
          item={true}
          zeroMinWidth={true}
        >
          <Memo(AdvancedSearchRowInput)
            classes={Object {}}
            disabledFields={Array []}
            inputField={
              Object {
                "ariaLabel": "Select a field to search on",
                "combiner": null,
                "hint": "Select a field to search on",
                "map": "",
                "order": 0,
                "title": "Select a field",
                "type": "TextField",
                "validation": Array [],
              }
            }
            onChange={[Function]}
            onSearchRowChange={[MockFunction]}
            onSearchRowDelete={[MockFunction]}
            render={[Function]}
            rowIndex={0}
            searchField="0"
            value=""
          />
        </WithStyles(ForwardRef(Grid))>
        <Hidden
          mdUp={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Divider))
              className="makeStyles-mobileRowSpacer-4"
            />
          </WithStyles(ForwardRef(Grid))>
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;

exports[`AdvancedSearchRow should render default view with styles 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-autoWidth-1"
          item={true}
          style={
            Object {
              "minWidth": 200,
            }
          }
        >
          <WithStyles(ForwardRef(FormControl))
            fullWidth={true}
          >
            <WithStyles(ForwardRef(Select))
              aria-label="Click to select a field to search from the list - Select a field currently selected"
              error={true}
              onChange={[Function]}
              value="0"
            >
              <WithStyles(ForwardRef(MenuItem))
                disabled={true}
                key="0"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="0"
              >
                Select a field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(Divider))
                key="1"
              />
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="all"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="all"
              >
                Any field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_title"
              >
                Title
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_book_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_book_title"
              >
                Book title for chapters
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author"
              >
                Author Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author_id"
              >
                Author ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor"
              >
                Editor/Contributor
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor_id"
              >
                Contributor ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_ismemberof"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_ismemberof"
              >
                Collection
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_doi"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_doi"
              >
                DOI
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_pid"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_pid"
              >
                PID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_series"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_series"
              >
                Series
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_journal_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_journal_name"
              >
                Journal name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_conference_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_conference_name"
              >
                Conference Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_publisher"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_publisher"
              >
                Publisher
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_genre_type"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_genre_type"
              >
                Thesis type
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_org_unit_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_org_unit_name"
              >
                School, Centre or Institute
              </WithStyles(ForwardRef(MenuItem))>
            </WithStyles(ForwardRef(Select))>
            <WithStyles(ForwardRef(FormHelperText))
              error={true}
            >
              Please select a field to search
            </WithStyles(ForwardRef(FormHelperText))>
          </WithStyles(ForwardRef(FormControl))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs="auto"
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-advancedSearchCombiner-3"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-mobileInputRow-5"
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-autoWidth-1"
          item={true}
          zeroMinWidth={true}
        >
          <Memo(AdvancedSearchRowInput)
            classes={Object {}}
            disabledFields={Array []}
            inputField={
              Object {
                "ariaLabel": "Select a field to search on",
                "combiner": null,
                "hint": "Select a field to search on",
                "map": "",
                "order": 0,
                "title": "Select a field",
                "type": "TextField",
                "validation": Array [],
              }
            }
            onChange={[Function]}
            onSearchRowChange={[MockFunction]}
            onSearchRowDelete={[MockFunction]}
            render={[Function]}
            rowIndex={0}
            searchField="0"
            value=""
          />
        </WithStyles(ForwardRef(Grid))>
        <Hidden
          mdUp={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Divider))
              className="makeStyles-mobileRowSpacer-4"
            />
          </WithStyles(ForwardRef(Grid))>
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;

exports[`AdvancedSearchRow should render input component and props 1`] = `
<div
  disabled={true}
  fullWidth={true}
  id="searchField"
  name="searchField0"
  type="search"
  value=""
/>
`;

exports[`AdvancedSearchRow should render search field row with given disabled options 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-autoWidth-1"
          item={true}
          style={
            Object {
              "minWidth": 200,
            }
          }
        >
          <WithStyles(ForwardRef(FormControl))
            fullWidth={true}
          >
            <WithStyles(ForwardRef(Select))
              aria-label="Click to select a field to search from the list - Any field currently selected"
              error={false}
              onChange={[Function]}
              value="all"
            >
              <WithStyles(ForwardRef(MenuItem))
                disabled={true}
                key="0"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="0"
              >
                Select a field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(Divider))
                key="1"
              />
              <WithStyles(ForwardRef(MenuItem))
                disabled={true}
                key="all"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="all"
              >
                Any field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_title"
              >
                Title
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_book_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_book_title"
              >
                Book title for chapters
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author"
              >
                Author Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author_id"
              >
                Author ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor"
              >
                Editor/Contributor
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor_id"
              >
                Contributor ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_ismemberof"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_ismemberof"
              >
                Collection
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_doi"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_doi"
              >
                DOI
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_pid"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_pid"
              >
                PID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_series"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_series"
              >
                Series
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_journal_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_journal_name"
              >
                Journal name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_conference_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_conference_name"
              >
                Conference Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_publisher"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_publisher"
              >
                Publisher
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_genre_type"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_genre_type"
              >
                Thesis type
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_org_unit_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_org_unit_name"
              >
                School, Centre or Institute
              </WithStyles(ForwardRef(MenuItem))>
            </WithStyles(ForwardRef(Select))>
            <WithStyles(ForwardRef(FormHelperText))
              error={false}
            />
          </WithStyles(ForwardRef(FormControl))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs="auto"
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-advancedSearchCombiner-3"
          >
            contains
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-mobileInputRow-5"
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-autoWidth-1"
          item={true}
          zeroMinWidth={true}
        >
          <Memo(AdvancedSearchRowInput)
            classes={Object {}}
            disabledFields={
              Array [
                "all",
                0,
              ]
            }
            inputField={
              Object {
                "ariaLabel": "Type a value to search all fields for",
                "captionValue": "anything",
                "combiner": "contains",
                "hint": "Add some text to search all fields with",
                "map": "",
                "order": 1,
                "title": "Any field",
                "type": "TextField",
                "validation": Array [
                  "maxLength500",
                ],
              }
            }
            onChange={[Function]}
            onSearchRowChange={[MockFunction]}
            onSearchRowDelete={[MockFunction]}
            render={[Function]}
            rowIndex={0}
            searchField="all"
            value="i feel lucky"
          />
        </WithStyles(ForwardRef(Grid))>
        <Hidden
          mdUp={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Divider))
              className="makeStyles-mobileRowSpacer-4"
            />
          </WithStyles(ForwardRef(Grid))>
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;

exports[`AdvancedSearchRow should render search field row with select field and search text 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-autoWidth-1"
          item={true}
          style={
            Object {
              "minWidth": 200,
            }
          }
        >
          <WithStyles(ForwardRef(FormControl))
            fullWidth={true}
          >
            <WithStyles(ForwardRef(Select))
              aria-label="Click to select a field to search from the list - Any field currently selected"
              error={false}
              onChange={[Function]}
              value="all"
            >
              <WithStyles(ForwardRef(MenuItem))
                disabled={true}
                key="0"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="0"
              >
                Select a field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(Divider))
                key="1"
              />
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="all"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="all"
              >
                Any field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_title"
              >
                Title
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_book_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_book_title"
              >
                Book title for chapters
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author"
              >
                Author Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author_id"
              >
                Author ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor"
              >
                Editor/Contributor
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor_id"
              >
                Contributor ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_ismemberof"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_ismemberof"
              >
                Collection
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_doi"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_doi"
              >
                DOI
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_pid"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_pid"
              >
                PID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_series"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_series"
              >
                Series
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_journal_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_journal_name"
              >
                Journal name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_conference_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_conference_name"
              >
                Conference Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_publisher"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_publisher"
              >
                Publisher
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_genre_type"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_genre_type"
              >
                Thesis type
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_org_unit_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_org_unit_name"
              >
                School, Centre or Institute
              </WithStyles(ForwardRef(MenuItem))>
            </WithStyles(ForwardRef(Select))>
            <WithStyles(ForwardRef(FormHelperText))
              error={false}
            />
          </WithStyles(ForwardRef(FormControl))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs="auto"
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-advancedSearchCombiner-3"
          >
            contains
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-mobileInputRow-5"
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-autoWidth-1"
          item={true}
          zeroMinWidth={true}
        >
          <Memo(AdvancedSearchRowInput)
            classes={Object {}}
            disabledFields={Array []}
            inputField={
              Object {
                "ariaLabel": "Type a value to search all fields for",
                "captionValue": "anything",
                "combiner": "contains",
                "hint": "Add some text to search all fields with",
                "map": "",
                "order": 1,
                "title": "Any field",
                "type": "TextField",
                "validation": Array [
                  "maxLength500",
                ],
              }
            }
            onChange={[Function]}
            onSearchRowChange={[MockFunction]}
            onSearchRowDelete={[MockFunction]}
            render={[Function]}
            rowIndex={0}
            searchField="all"
            value="i feel lucky"
          />
        </WithStyles(ForwardRef(Grid))>
        <Hidden
          mdUp={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Divider))
              className="makeStyles-mobileRowSpacer-4"
            />
          </WithStyles(ForwardRef(Grid))>
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;
